# aftershipstorage-clients

./: .env.example  .gitignore  CLI.md  INSTALL.md  README.md  aftership-custom.yaml.example  aftership-minimal.yaml.example  aftership.yaml.example  pyproject.toml
aftershipstorage/: __init__.py  base.py  cli.py  client.py  config.py  services.py
examples/: ai_compute.py  basic_usage.py  cli_usage.sh  config_file.py  context_manager.py  custom_headers.py  error_handling.py  file_storage.py  full_pipeline.py  hosting_resources.py  individual_clients.py  model_management.py  product_shipping.py
